[metadata]
name = hydrosolver
description = Optimization driven hydroponic nutrient calculator and a domain-specific language.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/dstrelnikov/hydrosolver
author = Dmytro Strelnikov
author_email = d.strelnikov@inventati.org,
license = GPL v3
license_file = LICENSE.md
classifiers =
    Environment :: Console
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls = 
    Documentation = https://hydrosolver.readthedocs.io/
    Source = https://github.com/dstrelnikov/hydrosolver
keywords = hydroponics, growing, domain-specific-language, optimizer

[options]
packages = hydrosolver
platforms = any
; include_package_data = False
install_requires = 
    numpy >= 1.13.1
    tabulate >= 0.8.9
    PyYAML >= 5.4.1
python_requires = >= 3.6
setup_requires =
    setuptools_scm

[options.package_data]
hydrosolver = database/*.yaml
